--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Site Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="company.css" />
-    <link rel="stylesheet" type="text/css" href="engineering-department.css" />
-    <link rel="stylesheet" type="text/css" href="project-x-launch.css" />
-    <link rel="stylesheet" type="text/css" href="typography.css" />
-</head>
-<body>
-    
-</body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>My Site Title</title>
+    </head>
+    <body>
+    </body>
 </html>
